keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-server-keisuke-one
  labels:
    run: keycloak-server-keisuke-one
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    run: keycloak-server-keisuke-one
